--- a/LMS/LMS/Views/Admin/Result.cshtml
+++ b/LMS/LMS/Views/Admin/Result.cshtml
@@ -96,7 +96,7 @@
                                     </div>
 
 
-                                    <button type="submit" class="btn btn-default">Calculate Result</button>
+                                    <button type="submit" class="btn btn-primary">Calculate Result</button>
 
                                 </form>
                             </div>
