--- a/LMS/LMS/Views/Admin/ShowCourses.cshtml
+++ b/LMS/LMS/Views/Admin/ShowCourses.cshtml
@@ -21,7 +21,7 @@
                     <div class="panel-heading">
 
                         <p>
-                            <a class="btn btn-success" href="@Url.Action("ReportCourses")">Download Report</a>
+                            <a class="btn btn-primary" href="@Url.Action("ReportCourses")">Download Report</a>
                         </p>
 
                        
