--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -42,17 +42,11 @@
                 </ul>
                 <ul class="nav navbar-right navbar-top-links">
 
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
 
-                            <li>
-                                <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                            </li>
-                        </ul>
+                    <li>
+                        <a href="/Home/Index"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                     </li>
+
                 </ul>
                 <!-- /.navbar-top-links -->
                 <div class="navbar-default sidebar" role="navigation">
@@ -66,7 +60,7 @@
                                 <!-- /input-group -->
                             </li>
                             <li>
-                                <a href="/Student/StudentDetalis"><i class="fa fa-dashboard fa-fw"></i> Student Details</a>
+                                <a href="/Student/StudentDetails"><i class="fa fa-dashboard fa-fw"></i> Student Details</a>
                             </li>
 
 
@@ -74,13 +68,14 @@
 
                             <!-- /.nav-second-level -->
                             <li>
-                                <a href="/Student/RegisterACourses"><i class="fa fa-edit fa-fw"></i>Register Courses</a>
+                                <a href="/RegisteredCourses/CourseRegister"><i class="fa fa-edit fa-fw"></i>Register Courses</a>
                             </li>
                             <li>
-                                <a href="/Student/RegisterCourses"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
+                                <a href="/ShowRegisteredCourses/ShowRegisteredCourses"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
                             </li>
                             <li>
-                                <a href="/Student/Scholarship"><i class="fa fa-edit fa-fw"></i> Scholarships</a>
+                                
+                                <a href="/Student/Scholarship"><i class="fa fa-edit fa-fw"></i>Show Scholarships</a>
 
 
 
@@ -102,20 +97,17 @@
 
 
                             <li>
-                                <a href="/Student/Attendance"><i class="fa fa-edit fa-fw"></i>Show Attendence</a>
+                                <a href="/Student/Attendance"><i class="fa fa-edit fa-fw"></i>Show Attandence</a>
                             </li>
 
 
-
-                            <li>
-                                <a href="/Student/FeeChallan"><i class="fa fa-table fa-fw"></i>Fee Challan </a>
-                            </li>
+ 
                             <li>
                                 <a href="/Student/ShowFee"><i class="fa fa-table fa-fw"></i>View Semester wise Fee </a>
                             </li>
 
                             <li>
-                                <a href="/Student/UpFeeChallan"><i class="fa fa-table fa-fw"></i>View Fee Challan</a>
+                                <a href="/Student/UpFeeChallan"><i class="fa fa-table fa-fw"></i> Fee Challan</a>
                             </li>
                             <!-- /.nav-second-level -->
 
