--- a/LMS/LMS/Views/StuRegister/Index.cshtml
+++ b/LMS/LMS/Views/StuRegister/Index.cshtml
@@ -78,7 +78,7 @@
                                         <label>Password</label>
                                         <input class="form-control" placeholder="Enter Password">
                                     </div>
-                                    <a href="stuLogin.html" class="btn btn-default">Register</a>
+                                    <a href="stuLogin.html" class="btn btn-primary">Register</a>
 
                                 </form>
                             </div>
