--- a/LMS/LMS/Views/Admin/AdminShowUpFeeChallan.cshtml
+++ b/LMS/LMS/Views/Admin/AdminShowUpFeeChallan.cshtml
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Students Fee</h1>
+                <h1 class="page-header">Students Fee Challan</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -18,8 +18,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-
-                       
+ 
                         <table class="table">
                             <tr>
                                 <th>
@@ -34,7 +33,7 @@
                                 <th>
                                     @Html.DisplayNameFor(model => model.Student.Name)
                                 </th>
-                                 
+
                             </tr>
 
                             @foreach (var item in Model)
@@ -52,7 +51,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Student.Name)
                                     </td>
-                                    
+
                                 </tr>
                             }
 
