--- a/LMS/LMS/Views/Admin/Courses.cshtml
+++ b/LMS/LMS/Views/Admin/Courses.cshtml
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Courses</h1>
+                <h1 class="page-header">Add Courses</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -78,7 +78,7 @@
 
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="Create" class="btn btn-default" />
+                                        <input type="submit" value="Create" class="btn btn-primary" />
                                     </div>
                                 </div>
                             </div>
