--- a/LMS/LMS/Views/Admin/Exam.cshtml
+++ b/LMS/LMS/Views/Admin/Exam.cshtml
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Exam</h1>
+                <h1 class="page-header">Add Exams</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -25,60 +25,58 @@
                         {
                             @Html.AntiForgeryToken()
 
-                            <div class="form-horizontal">
-                           
-                                <hr />
-                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-horizontal">
+                            <h4>Exams</h4>
+                            <hr />
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.ExamDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.ExamDate, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.ExamDate, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.DepartmentId, "DepartmentName", htmlAttributes: new { @class = "control-label col-md-5" })
-                                    <div class="col-md-10">
-                                        <br />
-
-                                        @Html.DropDownListFor(model => model.DepartmentId, ViewBag.DepartmentList as SelectList, "--SelectDepartment--", new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "error" })
-                                    </div>
-                                </div>
-                                <br />
-
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.SessionID, "SessionName", htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        <br />
-
-                                        @Html.DropDownListFor(model => model.SessionID, ViewBag.SessionList as SelectList, "--SelectSession--", new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.SessionID, "", new { @class = "error" })
-                                    </div>
-                                </div>
-                                <br />
-
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.CourseID, "CourseName", htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        <br />
-
-                                        @Html.DropDownListFor(model => model.CourseID, ViewBag.courseList as SelectList, "--SelectCourse--", new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "error" })
-                                    </div>
-                                </div>
-                                <br />
-                                <div class="form-group">
-                                    <div class="col-md-offset-2 col-md-10">
-                                        <input type="submit" value="Create" class="btn btn-default" />
-                                    </div>
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.ExamDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.EditorFor(model => model.ExamDate, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.ExamDate, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.DepartmentId, "DepartmentName", htmlAttributes: new { @class = "control-label col-md-5" })
+                                <div class="col-md-10">
+                                    <br />
+
+                                    @Html.DropDownListFor(model => model.DepartmentId, ViewBag.DepartmentList as SelectList, "--SelectDepartment--", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "error" })
+                                </div>
+                            </div>
+                            <br />
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.SessionID, "SessionName", htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    <br />
+
+                                    @Html.DropDownListFor(model => model.SessionID, ViewBag.SessionList as SelectList, "--SelectSession--", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.SessionID, "", new { @class = "error" })
+                                </div>
+                            </div>
+                            <br />
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.CourseID, "CourseName", htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    <br />
+
+                                    @Html.DropDownListFor(model => model.CourseID, ViewBag.courseList as SelectList, "--SelectCourse--", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.CourseID, "", new { @class = "error" })
+                                </div>
+                            </div>
+                            <br />
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                </div>
+                            </div>
+                        </div>
                         }
 
-                        <div>
-                            @Html.ActionLink("Back to List", "Index")
-                        </div>
+                       
