--- a/LMS/LMS/Views/Admin/StudentResult.cshtml
+++ b/LMS/LMS/Views/Admin/StudentResult.cshtml
@@ -52,7 +52,7 @@
                                         <input type=date class="form-control" placeholder="Enter Date">
                                     </div>
 
-                                    <button type="submit" class="btn btn-default">Total Result</button>
+                                    <button type="submit" class="btn btn-primary">Total Result</button>
 
                                 </form>
                             </div>
