--- a/LMS/LMS/Views/Home/Index.cshtml
+++ b/LMS/LMS/Views/Home/Index.cshtml
@@ -1,31 +1,69 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Home.cshtml";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<body>
+    <div class="header-wrapper">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+        <div class="header" style="background-image: url('/Content/pages/book.jpeg');width:100%;height:750px;">
+            <h1 style="color:white;font-size:50px;margin-left:130px;margin-top:5px;padding:150px;"><i><b>LEARNING MANAGEMENT SYSTEM</b></i></h1>
+
+
+
+            <center><a href="/Admin/Login" class="button">Login As Admin</a></center>
+            <br />
+            <center><a href="/Admin/Login" class="button">Login As Student</a></center>
+            <br />
+            <center><a href="/Admin/Login" class="button">Login As Employee</a></center>
+            <br>
+            <!----<div class="dropdown">
+                  <center><button class="dropbtn">Register</button></center>
+                  <div class="dropdown-content">
+                      <a href="/StuRegister/Index">Student</a>
+                      <a href="/EmpRegister/empRegister">Employee</a>
+                  </div>
+
+              </div>-->
+            <br>
+            <div class="container">
+
+                <div class="top-right">
+                    <h4><center>ABOUT US</center></h4>
+                    <p>
+                        <i>
+                            University OF Engineering <br>
+                            And Technology To play<br>
+                            a  leading role as a<br>
+                            University of Engineering <br>
+                            and Technology in teaching,<br>
+                            research, innovation and <br>
+                            commercialization that is <br>
+                            internationally relevant and<br>
+                            has a direct bearing on <br>
+                            national industrial,<br>
+                            technological and <br>
+                            socio-economic <br>
+                            development.<br>
+                            <br>
+                            <br>
+                            0313-5784929<br>
+                            uet@edu.pk<br>
+                            <br>
+                            <br>
+                        </i>
+                    </p>
+
+                </div>
+            </div>
+
+
+
+        </div>
+
+</body>
+
+
+
