--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -48,16 +48,11 @@
 
             <ul class="nav navbar-right navbar-top-links">
 
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
+
+                <li>
+                    <a href="/Home/Index"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                 </li>
+
             </ul>
             <!-- /.navbar-top-links -->
 
@@ -99,10 +94,10 @@
                             <a href="/EmpRegister/empRegister"><i class="fa fa-table fa-fw"></i>Add Employee</a>
                         </li>
                         <li>
-                            <a href="/Admin/ShowEmployee"><i class="fa fa-table fa-fw"></i>EmployeesList</a>
+                            <a href="/Admin/ShowEmployee"><i class="fa fa-table fa-fw"></i>Employees List</a>
                         </li>
                         <li>
-                            <a href="/Admin/ShowStudnet"><i class="fa fa-table fa-fw"></i>StudentList</a>
+                            <a href="/Admin/ShowStudnet"><i class="fa fa-table fa-fw"></i>Students List</a>
                         </li>
                         <li>
                             <a href="/Admin/RegisterStudent"><i class="fa fa-table fa-fw"></i>Add Student</a>
@@ -116,6 +111,11 @@
                         <li>
                             <a href="/Admin/AdminShowUpFeeChallan"><i class="fa fa-table fa-fw"></i>Students Fee Availing Scholarships</a>
                         </li>
+                        <li>
+                            <a href="/Admin/ShowScholarship"><i class="fa fa-table fa-fw"></i>Show Scholarships</a>
+                        </li>
+
+
 
                     </ul>
                 </div>
