--- a/LMS/LMS/Views/Shared/_Employee.cshtml
+++ b/LMS/LMS/Views/Shared/_Employee.cshtml
@@ -43,17 +43,11 @@
             </ul>
             <ul class="nav navbar-right navbar-top-links">
 
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> Log out <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
 
-                        <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
+                <li>
+                    <a href="/Home/Index"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                 </li>
+
             </ul>
             <!-- /.navbar-top-links -->
             <div class="navbar-default sidebar" role="navigation">
@@ -61,17 +55,17 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                              
+
                             </div>
                             <!-- /input-group -->
                         </li>
-                      
+
 
 
 
                         <li>
                             <!--  <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
-                              <ul class="nav nav-second-level">-->
+                      <ul class="nav nav-second-level">-->
 
                             <a href="/Employee/EmployeeDetails"><i class="fa fa-table fa-fw"></i>Employee Details</a>
                         </li>
@@ -82,7 +76,7 @@
                             <a href="/Employee/Reports"><i class="fa fa-table fa-fw"></i>Reports</a>
                         </li>
 
-                       
+
                         <!--   </ul> -->
                         <!-- /.nav-second-level -->
                         </li>
