--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -85,6 +85,10 @@
                         </li>
 
                         <li>
+                            <a href="/Admin/ShowResult"><i class="fa fa-table fa-fw"></i>Show Result</a>
+                        </li>
+
+                        <li>
                             <a href="/Admin/AddScholarship"><i class="fa fa-table fa-fw"></i>Add Scholarship</a>
                         </li>
                         <li>
