--- a/LMS/LMS/Views/Admin/Result.cshtml
+++ b/LMS/LMS/Views/Admin/Result.cshtml
@@ -1,9 +1,9 @@
-﻿
+﻿@model LMS.Models.Result
+
 @{
     ViewBag.Title = "Result";
     Layout = "~/Views/Shared/_Admin.cshtml";
 }
-
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row">
@@ -18,124 +18,63 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
 
-                    </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-lg-6">
+                   
 
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
 
-                                <form method="post">
-
-                                    <div class="form-group">
-                                        <label>Departments</label>
-                                        <select id="DepartmentComboBox" class="form-control">
-                                            <option value="-1">Select a department</option>
-                                            @foreach (var r in ViewBag.departments)
-                                            {
-                                                <option value="@r.DepartmentID">@r.DepartmentName</option>
-                                                
-
-                                            }
-
-
-                                        </select>
+                            <div class="form-horizontal">
+                    
+                                <hr />
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Grade, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.EditorFor(model => model.Grade, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
                                     </div>
+                                </div>
 
-                                    <div class="form-group">
-                                        <label>Students</label>
-                                        <select id="StudentComboBox" class="form-control">
-                                            <option value="-1">Select a Students</option>
-                                        </select>
-
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.CreditHours, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.EditorFor(model => model.CreditHours, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.CreditHours, "", new { @class = "text-danger" })
                                     </div>
+                                </div>
 
-                                    <div class="form-group">
-                                        <label>Student</label>
-                                        <select class="form-control">
-                                            <option></option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-
-                                        </select>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
                                     </div>
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.RegisteredCourseID, "Registered Students", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        <br />
 
-
-
-
-                                    <div class="form-group">
-                                        <label>Grade</label>
-                                        <input class="form-control" placeholder="Enter Grade">
+                                        @Html.DropDownListFor(model => model.RegisteredCourseID, ViewBag.r as SelectList, "--SelectCourse--", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.RegisteredCourseID, "", new { @class = "error" })
                                     </div>
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.StudentID, "Students", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        <br />
 
-
-                                    <div class="form-group">
-                                        <label>Credit Hours</label>
-                                        <input class="form-control" placeholder="Enter Credit Hours">
+                                        @Html.DropDownListFor(model => model.StudentID, ViewBag.u as SelectList, "--SelectStudent--", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.StudentID, "", new { @class = "error" })
                                     </div>
+                                </div>
 
 
-
-
-                                    <div class="form-group">
-                                        <label>Date</label>
-                                        <input type=date class="form-control" placeholder="Enter Date">
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" value="Add" class="btn btn-default" />
                                     </div>
-
-                                    <div class="form-group">
-                                        <label>Course</label>
-                                        <select class="form-control">
-                                            <option></option>
-                                            <option>1</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-
-                                        </select>
-                                    </div>
-
-
-                                    <button type="submit" class="btn btn-primary">Calculate Result</button>
-
-                                </form>
+                                </div>
                             </div>
-                            <!-- /.col-lg-6 (nested) -->
-                            <!-- /.col-lg-6 (nested) -->
-                        </div>
-                        <!-- /.row (nested) -->
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.panel -->
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
-</div>
-<!-- /#page-wrapper -->
-
-<script src="~/Content/js/jquery-1.7.1.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#DepartmentComboBox').on('change', function () {
-            var DepartmentsID = $('#DepartmentComboBox option:selected').val();
-            $.ajax({
-                type: 'GET',
-                data: { DepartmentsID: DepartmentsID },
-                url:'@Url.Action("StudentsFunction", "Admin")',
-                success: function (result) {
-                    var stud = JSON.stringify(result);
-                    var w = '<option value="-1">Select a Student</option>';
-                    for (var i = 0; i < stud.length; i++) {
-                        w += '< option value = "'+stud[i].Id+'">'+ stud[i].name+'</option >';
-
-                    }
-                    $('#StudentComboBox').html(w);
-                }
-            });       
-        });
-    });
-</script>
+                        }
