--- a/LMS/LMS/Views/Home/Index.cshtml
+++ b/LMS/LMS/Views/Home/Index.cshtml
@@ -13,12 +13,9 @@
 
 
 
-            <center><a href="/Admin/Login" class="button">Login As Admin</a></center>
+            <center><a href="/Admin/Login" class="button">Login</a></center>
             <br />
-            <center><a href="/Admin/Login" class="button">Login As Student</a></center>
-            <br />
-            <center><a href="/Admin/Login" class="button">Login As Employee</a></center>
-            <br>
+           
             <!----<div class="dropdown">
                   <center><button class="dropbtn">Register</button></center>
                   <div class="dropdown-content">
