--- a/LMS/LMS/Views/Admin/ShowExam.cshtml
+++ b/LMS/LMS/Views/Admin/ShowExam.cshtml
@@ -17,7 +17,9 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-
+                        <p>
+                            <a class="btn btn-primary" href="@Url.Action("ExamReport")">Download Report</a>
+                        </p>
 
 
                         <table class="table">
@@ -52,11 +54,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Session.Session1)
                                     </td>
-                                    <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.ExamID }) |
-                                        @Html.ActionLink("Details", "Details", new { id = item.ExamID }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.ExamID })
-                                    </td>
+
                                 </tr>
                             }
 
