--- a/LMS/LMS/Views/Admin/ShowResult.cshtml
+++ b/LMS/LMS/Views/Admin/ShowResult.cshtml
@@ -18,9 +18,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
 
-                      
 
 
+                        <p>
+                            <a class="btn btn-primary" href="@Url.Action("ResultReport")">Download Report</a>
+                        </p>
                         <table class="table">
                             <tr>
                                 <th>
