--- a/LMS/LMS/Views/Shared/_Admin.cshtml
+++ b/LMS/LMS/Views/Shared/_Admin.cshtml
@@ -96,10 +96,10 @@
                             <a href="/EmpRegister/empRegister"><i class="fa fa-table fa-fw"></i>Add Employee</a>
                         </li>
                         <li>
-                            <a href="/Admin/ShowEmployee"><i class="fa fa-table fa-fw"></i>Employees List</a>
+                            <a href="/Admin/Allmpp"><i class="fa fa-table fa-fw"></i>Employees List</a>
                         </li>
                         <li>
-                            <a href="/Admin/ShowStudnet"><i class="fa fa-table fa-fw"></i>Students List</a>
+                            <a href="/Admin/Allstt"><i class="fa fa-table fa-fw"></i>Students List</a>
                         </li>
                         <li>
                             <a href="/Admin/RegisterStudent"><i class="fa fa-table fa-fw"></i>Add Student</a>
