--- a/LMS/LMS/Views/Shared/_Student.cshtml
+++ b/LMS/LMS/Views/Shared/_Student.cshtml
@@ -71,33 +71,37 @@
                                 <a href="/RegisteredCourses/CourseRegister"><i class="fa fa-edit fa-fw"></i>Register Courses</a>
                             </li>
                             <li>
-                                <a href="/ShowRegisteredCourses/ShowRegisteredCourses"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
+                                <a href="/RegisteredCourses/CourseRegister"><i class="fa fa-edit fa-fw"></i>Show Registered Courses</a>
                             </li>
                             <li>
-                                
-                                <a href="/Student/Scholarship"><i class="fa fa-edit fa-fw"></i>Show Scholarships</a>
+
+                                <a href="/Student/ShowScholarship"><i class="fa fa-edit fa-fw"></i>Show Scholarships</a>
+                            </li>
+                            <li>
+
+                                <a href="/Admin/Re"><i class="fa fa-edit fa-fw"></i>Show Results</a>
                             </li>
 
 
 
 
 
-                            <!-- /.nav-second-level -->
+                            <!-- /.nav-second-level -->s
 
 
 
                             <li>
-                                <a href="/Student/Attendance"><i class="fa fa-edit fa-fw"></i>Show Attandence</a>
+                                <a href="/Student/viewattendance"><i class="fa fa-edit fa-fw"></i>Show Attandence</a>
                             </li>
 
 
- 
+
                             <li>
                                 <a href="/Student/ShowFee"><i class="fa fa-table fa-fw"></i>View Semester wise Fee </a>
                             </li>
 
                             <li>
-                                <a href="/Student/UpFeeChallan"><i class="fa fa-table fa-fw"></i> Fee Challan</a>
+                                <a href="/Student/ShowFee"><i class="fa fa-table fa-fw"></i> Fee Challan</a>
                             </li>
                             <!-- /.nav-second-level -->
 
