--- a/LMS/LMS/Views/Student/ShowScholarship.cshtml
+++ b/LMS/LMS/Views/Student/ShowScholarship.cshtml
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">View Scholarships</h1>
+                <h1 class="page-header">Show Scholarships</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -18,7 +18,8 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
- 
+
+                         
                         <table class="table">
                             <tr>
                                 <th>
@@ -39,7 +40,7 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Student.Name)
                                     </td>
-                                
+                               
                                 </tr>
                             }
 
